Fix tab switching in embedding apps.  Bug 139294, r=philipl@mail.utexas.edu, sr=jst, a=asa