layout/html/document/src/nsFrameFrame.cpp
@@ -1024,6 +1024,16 @@ nsHTMLFrameInnerFrame::ShowDocShell(nsIPresContext* aPresContext)
     return NS_OK;
   }
 
+  nsCOMPtr<nsIContentViewer> content_viewer;
+  docShell->GetContentViewer(getter_AddRefs(content_viewer));
+
+  if (content_viewer) {
+    // Mark the content viewer as non-sticky so that the presentation
+    // can safely go away when this frame is destroyed.
+
+    content_viewer->SetSticky(PR_FALSE);
+  }
+
   nsCOMPtr<nsIContent> content;
   GetParentContent(getter_AddRefs(content));
 
